--- a/style.css
+++ b/style.css
@@ -108,7 +108,8 @@ section {
 
 section h1 {
   font-size: 2.4em;
-  margin: 12px 0 25px 0;
+  margin: 0px 0 25px 0;
+  padding-top: 10px;
 }
 .word {
   color: #38c5f0;
@@ -280,8 +281,20 @@ footer {
   footer h2 {
     font-size: 1.2em;
   }
+  .center {
+    padding: 80px 15px 0 0;
+  }
+  .social-links {
+    display: grid;
+    gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
-
+@media (max-width: 400px) {
+  .center {
+    padding: 55px 15px 0 0;
+  }
+}
 @media (min-width: 800px) {
   .outer-nav-container {
     height: auto !important;
